# DS9481P-300

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: python_i2c_scan.py
examples/c/: CMakeLists.txt  c_i2c_scan.c
examples/python/: python_i2c_scan.py
include/: ds9481p.h
python/: setup.py
python/pyds9481p/: __init__.py
python/pyds9481p.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ds9481p.c
